'phone_no_added'

--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -69,6 +69,7 @@
     userName.classList.add("form-control");
     var pass1 = document.getElementById("id_password1");
     pass1.classList.add("form-control");
-    var pass2 = document.getElementById("id_password2");
-    pass2.classList.add("form-control");
+    var phone = document.getElementById("id_phone_number");
+    phone.classList.add("form-control");
+    phone.setAttribute('placeholder','phone number')
 </script>
