--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -1,9 +1,10 @@
 {% load i18n %}
-
+{% load account socialaccount %}
+{% get_providers as socialaccount_providers %}
 {% block content %}
+{% load static%}
 
-
-<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
@@ -18,43 +19,56 @@
   background-image: -o-linear-gradient(left, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
   background-image: linear-gradient(to right, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
 }
+
+body{
+    background-image: url('{% static 'img\1.jpg' %}');
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.contact-form {
+	background: rgba(0, 0, 0, 0.1);
+    position: absolute;
+    top: 10%;
+    padding: 40px;
+    border-radius: 25px;
+    border: 2px solid #73AD21;
+}
+
 </style>
 
-
 <div class="container">
-    <div class="row justify-content-center" style="margin:35px;">
-        <div class="col-md-3"></div>
-        <div class="col-md-6">
-            
-                <div class="card card-block border">
-                    <div class="card-header">
-                        <h2>Sign Up</h2>
-                        <hr class="colorgraph">
+    <div class="row justify-content-center" >
+        <div class="col-6 ml-20 contact-form">
+            <h2>Sign Up</h2>
+            <hr class="colorgraph">
+            <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+                {% csrf_token %}
+                <fieldset>
+                    <div class="form-group">
+                        {{ form.as_p }}
                     </div>
-                    <div class="card-body">
-                        <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-                            {% csrf_token %}
-                            <fieldset>
-                            <div class="form-group">
-                                {{ form.as_p }}
-                            </div>
-                            {% if redirect_field_value %}
-                            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-                            {% endif %}
-                            <hr class="colorgraph">
-                            <div class="row">
-                                <div class="col-xs-6 col-sm-6 col-md-6">
-                                    <button class="primaryAction btn btn-lg btn-success btn-block" type="submit">Sign Up</button>
-                                </div>
-                                <div class="col-xs-6 col-sm-6 col-md-6">
-                                    <a href="{{ login_url }}" class="btn btn-lg btn-primary btn-block">Log In</a>
-                                </div>
-                            </div>
-                        </fieldset>
+                    {% if redirect_field_value %}
+                    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                    {% endif %}
+                    <hr class="colorgraph">
+                    <div class="row">
+                        <div class="col-xs-6 col-sm-6 col-md-6">
+                            <button class="primaryAction btn btn-lg btn-success btn-block" type="submit">Sign Up</button>
+                        </div>
+                        <div class="col-xs-6 col-sm-6 col-md-6">
+                            <a href="{% provider_login_url "google" %}" class="btn btn-lg btn-danger btn-block">Google</a>
+                        </div>
+                    </div>
+                    
+                    <span class="button-checkbox">
+                        <a href="{{ login_url }}" class="btn btn-link pull-right float-right">Already have an account</a>
+                    </span>
+                </fieldset>
 
-                        </form>
-                    </div>
-                </div>
+            </form>
         </div>
     </div>
 </div>
